--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,5 @@
 project:
   type: website
-  output-dir: docs
   
 website:
   title: "All-Island eHealth-Hub for Cancer"
@@ -9,7 +8,7 @@ website:
     type: overlay
     
   favicon: eHealthHub_logo.png
-  site-url: https://aedin.github.io/eHealthHub/
+  site-url: https://mblue9.github.io/eHealthHub/
 
   navbar:
     background: primary
@@ -87,7 +86,7 @@ website:
         
 
     
-repo-url: https://github.com/aedin/eHealthHub/
+repo-url: https://github.com/mblue9/eHealthHub/
 repo-actions: [edit, issue]
   
 
@@ -105,7 +104,7 @@ format:
     theme: flatly
     css: styles.css
     toc: true
-    include-after-body: footer.html
+    #include-after-body: footer.html
 
 
 editor: visual
